--- a/.gitignore
+++ b/.gitignore
@@ -7,29 +7,7 @@ static/
 
 **/__pycache__/*
 
-# User-specific stuff
-1.txt
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
-
-# Generated files
-.idea/**/contentModel.xml
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+.idea/
 
 # Django stuff:
 *.log
@@ -41,10 +19,5 @@ db.sqlite3
 
 # Environments
 .env
-.venv
-env/
 venv/
-ENV/
-env.bak/
-venv.bak/
 
