--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ werkzeug = "==1.0.1"
 Django = "==3.0.6"
 Pillow = "==7.2.0"
 drf-yasg = "==1.17.1"
+djangorestframework	= "==3.11.0"
 
 [requires]
 python_version = "3.8"
