CardModels, CardTypeSerializer, CardTypeView, Начата подготовка фикстур

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [pycodestyle]
-ignore=migrations,settings.py
-disable=C0114,F0010
+ignore=migrations,settings.py,authapp,munchkin
+disable=C0114,F0010,R0903,R0901,E1101,C0103
 max-line-length=80
 
 [isort]
