--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 isort = "*"
 pylint = "*"
+pylint-django = "*"
 
 [packages]
 asgiref = "==3.2.7"
@@ -17,6 +18,7 @@ Django = "==3.0.6"
 Pillow = "==7.2.0"
 drf-yasg = "==1.17.1"
 djangorestframework	= "==3.11.0"
+pyyaml = "==5.3.1"
 
 [requires]
 python_version = "3.8"
