--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ Pillow = "==7.2.0"
 drf-yasg = "==1.17.1"
 djangorestframework	= "==3.11.0"
 pyyaml = "==5.3.1"
+redis = "==3.5.3"
 
 [requires]
 python_version = "3.8"
